[package]
name = "rkt"
version = "0.1.0"
authors = ["Garrett Squire <garrett.squire@crowdstrike.com>"]

[dependencies]
diesel = { version = "0.15", features = ["sqlite"] }
diesel_codegen = { version = "0.15", features = ["sqlite"] }
dotenv = "0.10"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
